--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ excerpt_separator: <!--more-->
 title:            fmendo
 tagline:          'fmendo.com'
 description:      'Hi, I&#8217;m Filipe and I&#8217;m a Windows Developer living in London'
-header-img: img/home-bg.jpg
+header-img: img/about-bg.jpg
 url:              http://www.fmendo.com
 baseurl:          /
 
