--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ title:            fmendo
 tagline:          'fmendo.com'
 description:      'Hi, I&#8217;m Filipe and I&#8217;m a Windows Developer living in London'
 url:              http://www.fmendo.com
-baseurl:          /
+baseurl:          http://www.fmendo.com/
 
 author:
   name:           'Filipe Duarte'
