--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Dependencies
-gems: [jekyll-paginate, jekyll-feed]
+plugins: [jekyll-paginate, jekyll-feed]
 markdown:         kramdown
 highlighter:      rouge
 
@@ -15,9 +15,9 @@ excerpt_separator: <!--more-->
 title:            fmendo
 tagline:          'fmendo.com'
 description:      'Hi, I&#8217;m Filipe and I&#8217;m a Windows Developer living in London'
-header-img: img/about-bg.jpg
+header-img:       img/about-bg.jpg
 url:              http://www.fmendo.com
-baseurl:          http://www.fmendo.com/
+baseurl:          /
 root:             /
 
 email: me@fmendo.com
