--- a/_config.yml
+++ b/_config.yml
@@ -18,24 +18,26 @@ url: http://www.fmendo.com
 #   To create sub categories. add a submenu item
 # See the example
 menu:
-  - title: 'home'
-    url: '/'
+  # - title: 'home'
+  #   url: '/'
   - title: 'about'
     url: '/about'
-  - title: 'apps'
-    url: '/apps'
-  - title: 'resume'
-    url: '/resume'
-  - title: 'tags'
-    url: '/tags'
+  - title: 'blog'
+    url: '/blog'
+  - title: 'projects'
+    url: '/projects'
+  # - title: 'resume'
+  #   url: '/resume'
+  # - title: 'tags'
+  #   url: '/tags'
   # - title: 'Categories'
   #   url: '/categories'
   #   type: 'categories'
-  # - title: 'Favorites'
-  #   url: '#'
-  #   submenu:
-  #     - title: 'Code Highlighter'
-  #       url: '/intro/code-highlighting-post/'
+  - title: 'more...'
+    url: '#'
+    submenu:
+      - title: 'travel'
+        url: '/travel'
   #     - title: 'Sample Post'
   #       url: '/intro/sample-post/'
 
