--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ reading_time:     true # if true, shows the estimated reading time for a post
 words_per_minute: 200
 logo:             images/logo.png # logo visible in the topbar
 excerpt_separator: <!--more-->
+
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-
 url: http://www.fmendo.com
 
 # draw your top menu here
@@ -87,7 +87,12 @@ sass:
 permalink:   /blog/:title/
 
 # Amount of post to show on home page
-paginate: 5
+pagination:
+  enabled: true
+  per_page: 5
+  permalink: /page/:num/
+  sort_reverse: true
+  # category: 'posts'
 
 # if true, shows the floatting share buttons
 float_share: false
@@ -104,4 +109,4 @@ titlecase: true
 
 include: [".htaccess"]
 exclude: ["demo/*", "lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate-v2]
