--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ menu:
   - title: 'about'
     url: '/about'
   - title: 'blog'
-    url: '/blog'
+    url: '/'
   - title: 'projects'
     url: '/projects'
   # - title: 'resume'
@@ -65,7 +65,7 @@ social:
     url: "https://br.linkedin.com/in/filipemiguel"
 
 # Background image to be tiled on all pages
-background:
+background: 
 
 # Analytics and webmaster tools stuff goes here
 google_analytics:
