--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ reading_time:     true # if true, shows the estimated reading time for a post
 words_per_minute: 200
 logo:             images/logo.png # logo visible in the topbar
 excerpt_separator: <!--more-->
+
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-
 url: http://www.fmendo.com
 
 # draw your top menu here
@@ -18,24 +18,32 @@ url: http://www.fmendo.com
 #   To create sub categories. add a submenu item
 # See the example
 menu:
-  - title: 'home'
+  # - title: 'home'
+  #   url: '/'
+  - title: 'blog'
     url: '/'
+  - title: 'projects'
+    url: '/projects'
   - title: 'about'
     url: '/about'
-  - title: 'apps'
-    url: '/apps'
-  - title: 'resume'
-    url: '/resume'
-  - title: 'tags'
-    url: '/tags'
+  # - title: 'resume'
+  #   url: '/resume'
+  # - title: 'tags'
+  #   url: '/tags'
   # - title: 'Categories'
   #   url: '/categories'
   #   type: 'categories'
-  # - title: 'Favorites'
-  #   url: '#'
-  #   submenu:
-  #     - title: 'Code Highlighter'
-  #       url: '/intro/code-highlighting-post/'
+  - title: 'more...'
+    url: '#'
+    submenu:
+      - title: 'travel'
+        url: '/travel'
+      - title: 'tags'
+        url: '/tags'
+      - title: 'archive'
+        url: '/posts'
+      - title: 'rss'
+        url: '/feed.xml'
   #     - title: 'Sample Post'
   #       url: '/intro/sample-post/'
 
@@ -44,12 +52,12 @@ owner:
   name:           Filipe Duarte
   site:           http://www.fmendo.com
   avatar:         images/avatar.jpg
-  bio:            "Hi, I&#8217;m Filipe and I&#8217;m a Windows Developer living in London"
+  bio:            "Hi, I&#8217;m Filipe. I&#8217;m a Software Engineer, from Portugal, currently living in London, building stuff for Paddle."
   email:          me@fmendo.com
   # Twitter nick for use in Twitter cards and follow button.
-  twitter: fmmendo # if no twitter in this config, the twitter follow button will be removed
+  # twitter: fmmendo # if no twitter in this config, the twitter follow button will be removed
   # GitHub nick for use in follow button in author block.
-  github: fmmendo
+  # github: fmmendo
 
 # Twitter account associated with the site if different from owner/author twitter account.
 # Used in Twitter cards.
@@ -60,10 +68,16 @@ social:
   - title: "github"
     url: "https://github.com/fmmendo"
   - title: "linkedin"
-    url: "https://br.linkedin.com/in/filipemiguel"
+    url: "https://www.linkedin.com/in/filipemiguel"
+  - title: "twitter"
+    url: "https://www.twitter.com/fmmendo"
+  - title: "instagram"
+    url: "https://www.instagram.com/fmmendo"
+  - title: "envelope"
+    url: "mailto:me@fmendo.com"
 
 # Background image to be tiled on all pages
-background:
+background: 
 
 # Analytics and webmaster tools stuff goes here
 google_analytics:
@@ -82,10 +96,15 @@ sass:
   style: compressed
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink:   /:categories/:title/
+permalink:   /blog/:title/
 
 # Amount of post to show on home page
-paginate: 5
+pagination:
+  enabled: true
+  per_page: 5
+  permalink: /page/:num/
+  sort_reverse: true
+  # category: 'posts'
 
 # if true, shows the floatting share buttons
 float_share: false
@@ -102,4 +121,4 @@ titlecase: true
 
 include: [".htaccess"]
 exclude: ["demo/*", "lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate-v2]
