--- a/.github/workflows/scheduled_posts.yml
+++ b/.github/workflows/scheduled_posts.yml
@@ -2,7 +2,7 @@ name: Build every hour
 
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 8 * * *"
 jobs:
   curl:
     runs-on: ubuntu-latest
